[gd_scene load_steps=2 format=3 uid="uid://b81twh1xtva0u"]

[ext_resource type="Script" path="res://Scene/MainMenu.gd" id="1_tyq1o"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tyq1o")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 652.0

[node name="TextureRect" type="TextureRect" parent="TitleLabel"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 649.0

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 146.0
offset_right = 761.0
offset_bottom = 237.0
text = "Start"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 459.0
offset_top = 362.0
offset_right = 757.0
offset_bottom = 471.0
text = "Exit"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
